syntax = "proto3";

package ecommerce;

option java_multiple_files = true;
option java_package = "com.ortisan.ecommerce.proto";
option java_outer_classname = "ECommerceProto";

import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string email = 2;
  string name = 3;
}

message Product {
  string sku = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string category = 5;
}

message ProductViewEvent {
  User user = 1;
  Product product = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message PurchaseEvent {
  User user = 1;
  Product product = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message ECommerceEvent {
  oneof event {
    ProductViewEvent product_view = 1;
    PurchaseEvent purchase = 2;
  }
}
